# nftslime

./: CMakeLists.txt  main.cpp  nftslime.sln  nftslime.vcxproj  nftslime.vcxproj.filters
nftslime.dir/Debug/: nftslime.exe.recipe  nftslime.ilk  vc143.idb
nftslime.dir/Debug/nftslime.tlog/: Cl.items.tlog  CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  nftslime.lastbuildstate
